# Workspace_AI_Engineering

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  REQUIREMENTS.md  WHITEPAPER.md  novo-projeto.ps1  pyproject.toml  requirements.txt
projetos/.template/: pyproject.toml
projetos/aqua_qe_Robot_framework/: README.md  pyproject.toml
projetos/aqua_qe_Robot_framework/knowledge/projeto_adopet/: modules_registry.yaml  stories_index.yaml
projetos/aqua_qe_Robot_framework/knowledge/projeto_adopet/dom/: index.json
projetos/aqua_qe_Robot_framework/knowledge/projeto_adopet/dom/modules/home/contracts/: dom_contract.json
projetos/aqua_qe_Robot_framework/knowledge/projeto_adopet/dom/modules/home/diffs/: history.md
projetos/aqua_qe_Robot_framework/knowledge/projeto_adopet/dom/modules/home/locators/: locators_map.json
projetos/aqua_qe_Robot_framework/knowledge/projeto_adopet/dom/modules/home/snapshots/: DOM-HOME-20260709-001.html
projetos/aqua_qe_Robot_framework/knowledge/projeto_adopet/rules_delta/: home_rules_delta.md
projetos/aqua_qe_Robot_framework/knowledge/projeto_adopet/stories/: ADOP-0001.md
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/: acessibilidade_knowledge.md  home_knowledge.md  modules_registry.yaml  stories_index.yaml
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/: README.md  index.json
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/incoming/: 2026-07-01_ativos_aceitos_garantias_from_chat.html
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/modules/ativos_aceitos_garantias/contract/: dom_contract.json
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/modules/ativos_aceitos_garantias/diffs/: history.md
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/modules/ativos_aceitos_garantias/locators/: locators_map.json
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/modules/home/contract/: dom_contract.json
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/modules/home/locators/: locators_map.json
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/modules/home/snapshots/: DOM-HOME-20260708-001.html
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/modules/limites_posicoes/: README.md  dom_validation_proposal.md  validation_plan.yaml
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/modules/limites_posicoes/contract/: dom_contract.json
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/modules/limites_posicoes/diffs/: hystory.md
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/modules/limites_posicoes/locators/: locators_map.json
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/dom/modules/limites_posicoes/snapshots/: DOM-LIMITES_POSICOES-20260701-001.html
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/rules_delta/: acessibilidade_rules_delta.md  ativos_aceitos_garantias_rules_delta.md  consulta_isin_rules_delta.md  home_rules_delta.md  limites_posicoes_rules_delta.md  links_acessos_rapidos_rules_delta.md  responsividade_rules_delta.md
projetos/aqua_qe_Robot_framework/knowledge/projeto_robot_piloto/stories/: EDUQ-90.md  TEMPLATE_EDUQ.md
projetos/aqua_qe_Robot_framework/prompts/: dom_watcher.md  knowledge_agent.md  orchestrator.md  story_analyzer.md  test_generator.md
projetos/aqua_qe_Robot_framework/src/aqua_qe/: __init__.py  cli.py  config.py  dom_registry.py  prompt_builder.py  story_registry.py  templates.py  validator.py
projetos/aqua_qe_Robot_framework/tests/: test_config.py  test_dom_registry.py  test_prompt_builder.py  test_story_registry.py  test_templates.py  test_validator.py
projetos/rag-documentos/: pyproject.toml
