[project]
name = "NOME_PROJETO"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Adicione aqui as dependências específicas deste projeto.
    # Exemplos:
    #
    # LLM Providers
    # "openai>=1.0",
    # "anthropic>=0.50",
    # "google-genai>=1.0",
    # "groq>=0.11",
    # "mistralai>=1.0",
    #
    # Orquestração
    # "langchain>=0.3",
    # "langgraph>=0.2",
    # "langsmith>=0.2",
    #
    # MCP
    # "mcp>=1.0",
    #
    # Embeddings
    # "sentence-transformers>=3.0",
    # "transformers>=4.45",
    # "accelerate>=1.0",
    #
    # Banco Vetorial
    # "qdrant-client>=1.12",
    # "chromadb>=0.5",
    # "faiss-cpu>=1.9",
    #
    # Banco de Grafos
    # "neo4j>=5.0",
    #
    # Banco de Dados
    # "sqlalchemy>=2.0",
    # "psycopg[binary]>=3.0",
    # "pymongo>=4.0",
    # "redis>=5.0",
    #
    # API
    # "fastapi>=0.115",
    # "uvicorn[standard]>=0.32",
    #
    # Observabilidade
    # "opentelemetry-api>=1.28",
    # "opentelemetry-sdk>=1.28",
    #
    # Documentos
    # "pypdf>=5.0",
    # "pymupdf>=1.24",
    # "unstructured>=0.15",
    # "beautifulsoup4>=4.12",
    # "lxml>=5.0",
    #
    # Dados
    # "pandas>=2.2",
    # "numpy>=2.0",
]

[tool.pytest.ini_options]
addopts = "--tb=short -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
